fix visibility ALL ATTRACTIONS UNDER ONE ROOF

--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ body {
     max-width: 1920px;
     overflow: hidden;
 }
-.page__row.aboutus__wrap {
+.page__row.onVisible {
     overflow: visible;
 }
 .page__cell{
